--- a/src/login.html
+++ b/src/login.html
@@ -18,5 +18,6 @@
 			<a href="register.php">Jeśli nie masz konta</a>
 		</div>
 	</div>
+	 <div class="footer">© Adam Radomski</div>
 </body>
 </html>
